<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.hvdevelopers.uoftgo.SelectionScreen"
    android:background="@android:color/background_dark">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="97dp"
            android:id="@+id/userName"
            android:textColor="#FFF"/>

        <Button
            android:text="@string/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn_settings"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="10dp" />

        <Button
            android:text="@string/blue"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:id="@+id/bluebtn"
            android:layout_alignLeft="@+id/yellowbtn"
            android:layout_alignStart="@+id/yellowbtn"
            android:layout_below="@+id/yellowbtn"
            android:textSize="32sp"
            android:background="?attr/colorPrimaryDark"
            android:textColor="#FFFFFF"/>

        <Button
            android:text="@string/yellow"
            android:layout_width="500dp"
            android:layout_height="150dp"
            android:id="@+id/yellowbtn"
            android:textSize="32sp"
            android:layout_marginTop="34dp"
            android:layout_below="@+id/userName"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/colorPressedHighlight"
            android:textColor="#FFFFFF"/>

        <Button
            android:text="@string/cont"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="14dp"
            android:textSize="20sp"
            android:id="@+id/btncontinue" />
    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
